<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/loginFragment">

    <fragment
        android:id="@+id/loginFragment"
        android:name="com.elitecouture.app.ui.feature.auth.login.LoginFragment"
        android:label="@string/nav_label_login"
        tools:layout="@layout/fragment_auth_login">
        <action
            android:id="@+id/action_loginFragment_to_storeFragment"
            app:destination="@id/storeFragment"
            app:popUpTo="@id/loginFragment"
            app:popUpToInclusive="true" />
        <action
            android:id="@+id/action_loginFragment_to_registerFragment"
            app:destination="@id/registerFragment"
            app:popUpTo="@id/loginFragment"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/registerFragment"
        android:name="com.elitecouture.app.ui.feature.auth.register.RegisterFragment"
        android:label="@string/nav_label_register"
        tools:layout="@layout/fragment_auth_register">
        <action
            android:id="@+id/action_registerFragment_to_storeFragment"
            app:destination="@id/storeFragment"
            app:popUpTo="@id/registerFragment"
            app:popUpToInclusive="true" />
        <action
            android:id="@+id/action_registerFragment_to_loginFragment"
            app:destination="@id/loginFragment"
            app:popUpTo="@id/loginFragment"
            app:popUpToInclusive="true"
            app:launchSingleTop="true" />
    </fragment>

    <fragment
        android:id="@+id/storeFragment"
        android:name="com.elitecouture.app.ui.feature.store.StoreFragment"
        android:label="@string/nav_label_store"
        tools:layout="@layout/fragment_feature_store">
        <action
            android:id="@+id/action_storeFragment_to_profileFragment"
            app:destination="@id/profileFragment" />
        <action
            android:id="@+id/action_storeFragment_to_favoritesFragment"
            app:destination="@id/favoritesFragment" />
        <action
            android:id="@+id/action_storeFragment_to_cartFragment"
            app:destination="@id/cartFragment" />
        <action
            android:id="@+id/action_storeFragment_to_loginFragment"
            app:destination="@id/loginFragment"
            app:popUpTo="@id/storeFragment"
            app:popUpToInclusive="true" />
        <action
            android:id="@+id/action_storeFragment_to_storeMapFragment"
            app:destination="@id/storeMapFragment" />
    </fragment>

    <fragment
        android:id="@+id/cartFragment"
        android:name="com.elitecouture.app.ui.feature.cart.CartFragment"
        android:label="@string/cart_title"
        tools:layout="@layout/fragment_cart">
        <action
            android:id="@+id/action_cartFragment_to_storeFragment"
            app:destination="@id/storeFragment" />
        <action
            android:id="@+id/action_cartFragment_to_profileFragment"
            app:destination="@id/profileFragment" />
    </fragment>

    <fragment
        android:id="@+id/favoritesFragment"
        android:name="com.elitecouture.app.ui.feature.favorites.FavoritesFragment"
        android:label="@string/favorites_title"
        tools:layout="@layout/fragment_favorites">
        <action
            android:id="@+id/action_favoritesFragment_to_storeFragment"
            app:destination="@id/storeFragment" />
        <action
            android:id="@+id/action_favoritesFragment_to_profileFragment"
            app:destination="@id/profileFragment" />
        <action
            android:id="@+id/action_favoritesFragment_to_cartFragment"
            app:destination="@id/cartFragment" />
    </fragment>

    <fragment
        android:id="@+id/profileFragment"
        android:name="com.elitecouture.app.ui.feature.profile.ProfileFragment"
        android:label="@string/nav_label_profile"
        tools:layout="@layout/fragment_feature_profile">
        <action
            android:id="@+id/action_profileFragment_to_loginFragment"
            app:destination="@id/loginFragment"
            app:popUpTo="@id/nav_graph"
            app:popUpToInclusive="false"
            app:launchSingleTop="true" />
        <action
            android:id="@+id/action_profileFragment_to_editProfileFragment"
            app:destination="@id/editProfileFragment" />
        <action
            android:id="@+id/action_profileFragment_to_favoritesFragment"
            app:destination="@id/favoritesFragment" />
        <action
            android:id="@+id/action_profileFragment_to_storeFragment"
            app:destination="@id/storeFragment" />
        <action
            android:id="@+id/action_profileFragment_to_cartFragment"
            app:destination="@id/cartFragment" />
    </fragment>

    <fragment
        android:id="@+id/editProfileFragment"
        android:name="com.elitecouture.app.ui.feature.profile.EditProfileFragment"
        android:label="@string/edit_profile_section_personal_info"
        tools:layout="@layout/fragment_feature_edit_profile">
        <action
            android:id="@+id/action_editProfileFragment_to_profileFragment"
            app:destination="@id/profileFragment"
            app:popUpTo="@id/profileFragment"
            app:popUpToInclusive="false" />
    </fragment>

    <fragment
        android:id="@+id/storeMapFragment"
        android:name="com.elitecouture.app.ui.feature.store.StoreMapFragment"
        android:label="@string/store_map_title"
        tools:layout="@layout/fragment_store_map">
        <action
            android:id="@+id/action_storeMapFragment_to_storeFragment"
            app:destination="@id/storeFragment"
            app:popUpTo="@id/storeFragment"
            app:popUpToInclusive="false" />
    </fragment>

</navigation>